# Graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.hpp  curve.hpp  disk.hpp  fractal.hpp  group.hpp  hit.hpp  image.hpp  material.hpp  mesh.hpp  motion_blur.hpp  object3d.hpp  plane.hpp  portal.hpp  ray.hpp  render.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp  texture.cpp
